# sequence-toolkit

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md
apis/: Makefile  README.md  mk_gem.sh  mk_interfaces.sh  mk_java_interfaces.sh  mk_python_interfaces.sh  mk_ruby_interfaces.sh  setenv_swig  stk.gemspec  stk_dispatcher_cb.h  stk_name_service_cb.h  stk_service_cb.h
apis/common_interfaces/: stk_data_flow.c  stk_env.c  stk_name_service.c  stk_options.c  stk_sequence.c  stk_service.c  stk_service_group.c  stk_smartbeat.c  stk_tcp_server.c
apis/java_examples/: monitored_service.java
apis/python_examples/: monitored_service.py  publish.py  simple_client.py  simple_name_lookup.py  simple_name_registration.py  simple_server.py  stk_examples.py  subscribe.py
apis/python_interface_helpers/: README  default.m  stk_data_flow.py  stk_env.i  stk_env.py  stk_name_service.py  stk_options.i  stk_options.py  stk_rawudp.py  stk_sequence.py  stk_service.i  stk_service.py  stk_service_group.py  stk_sg_automation.i  stk_smartbeat.i  stk_smartbeat.py  stk_tcp_client.i  stk_tcp_client.py  stk_tcp_server.py  stk_udp_client.py  stk_udp_listener.py
apis/ruby_api/: stk_data_flow.rb  stk_env.i  stk_env.rb  stk_name_service.i  stk_name_service.rb  stk_options.i  stk_options.rb  stk_rawudp.i  stk_rawudp_client.rb  stk_rawudp_listener.rb  stk_sequence.i  stk_sequence.rb  stk_service.rb  stk_service_group.i  stk_service_group.rb  stk_tcp_client.rb  stk_tcp_server.rb  stk_udp_client.rb  stk_udp_listener.rb  stkenv.m  stkname_service.m  stkservice_group.m
apis/ruby_examples/: Gemfile  monitored_service.rb  publish.rb  simple_client.rb  simple_name_lookup.rb  simple_name_registration.rb  simple_server.rb  stk_examples.rb  subscribe.rb
apis/ruby_gem/: Gemfile  stk.gemspec
apis/ruby_gem/lib/: stk.rb
apis/ruby_gem/lib/stk/: version.rb
apis/ruby_gem/spec/: spec_helper.rb  stk_spec.rb
daemons/: CMakeLists.txt  banner.phtml  charts.phtml  footer.phtml  header-data.phtml  header.phtml  stk_httpcontent.c  stk_httpcontent.h  stk_httpd_main.c  stk_name_store.c  stk_name_store.h  stk_named_main.c  stk_subscription_store.c  stk_subscription_store.h  stkd.c  stkd.cfg  stkhttpd.c  stkhttpd.h  stknamed.c  stknamed.h
daemons/js/: stkcharts.js  stkdata.js  stkhttpd.js
examples/: CMakeLists.txt  eg_dispatcher.c  eg_dispatcher_api.h  monitored_service.c  publish.c  raw_multicast_bridge.c  simple_client.c  simple_name_lookup.c  simple_name_registration.c  simple_server.c  stk_examples.h  subscribe.c  throughput_test.c
include/: stk.h  stk_common.h  stk_data_flow.h  stk_data_flow_api.h  stk_env.h  stk_env_api.h  stk_ids.h  stk_name_service.h  stk_name_service_api.h  stk_options.h  stk_options_api.h  stk_ports.h  stk_rawudp.h  stk_rawudp_api.h  stk_sequence.h  stk_sequence_api.h  stk_service.h  stk_service_api.h  stk_service_group.h  stk_service_group_api.h  stk_sg_automation.h  stk_sg_automation_api.h  stk_smartbeat.h  stk_smartbeat_api.h  stk_sync.h  stk_sync_api.h  stk_tcp.h  stk_tcp_client.h  stk_tcp_client_api.h  stk_tcp_server.h  stk_tcp_server_api.h  stk_timer.h  stk_timer_api.h  stk_udp.h  stk_udp_client.h  stk_udp_client_api.h  stk_udp_listener.h  stk_udp_listener_api.h
lib/: CMakeLists.txt  PLists.c  setenv_stk  stk_assert_log.h  stk_data_flow.c  stk_mixed_connection.c  stk_mixed_connection.h  stk_name_service.c  stk_options.c  stk_rawudp.c  stk_service.c  stk_tcp_client.c  stk_tcp_internal.h  stk_tcp_server.c  stk_timer.c  stk_udp_client.c  stk_udp_listener.c
src/: PLists.h  stk_df_internal.h  stk_env.c  stk_internal.h  stk_mixed_connection_api.h  stk_name_service.c  stk_sequence.c  stk_service_group.c  stk_sg_automation.c  stk_sga_internal.h  stk_smartbeat.c  stk_sync.c  stk_udp_internal.h
test_programs/: CMakeLists.txt  add_services_to_webmon.sh  basic_svc_mon.sh  check_service_group_state_test.c  create_env_test.c  create_lite_pkg_test.c  create_sequence_test.c  create_service_group_test.c  create_service_test.c  name_service_tests.c  options_tests.c  rawudp_data_flow_test.c  sequence_iterator_test.c  sequence_tests.c  service_group_auto_svc_test.c  service_state_names.c  stk_test.h  tcp_data_flow_test.c  test.make  test_types.c  timer_test.c  udp_data_flow_test.c
unit_tests/: CMakeLists.txt  stk_unit_test.h  sync_test.c
