SET(DISPATCHER_SRC eg_dispatcher.c eg_dispatcher_api.h)

add_executable(simple_client simple_client.c  ${DISPATCHER_SRC})
add_executable(simple_server simple_server.c ${DISPATCHER_SRC})
add_executable(throughput_test throughput_test.c ${DISPATCHER_SRC})
add_executable(monitored_service monitored_service.c ${DISPATCHER_SRC})
add_executable(simple_name_lookup simple_name_lookup.c ${DISPATCHER_SRC})
add_executable(simple_name_registration simple_name_registration.c ${DISPATCHER_SRC})
add_executable(raw_multicast_bridge raw_multicast_bridge.c ${DISPATCHER_SRC})
add_executable(subscribe subscribe.c ${DISPATCHER_SRC})
add_executable(publish publish.c ${DISPATCHER_SRC})

target_link_libraries(simple_client stk)
target_link_libraries(simple_server stk)
target_link_libraries(throughput_test stk)
target_link_libraries(monitored_service stk)
target_link_libraries(simple_name_lookup stk)
target_link_libraries(simple_name_registration stk)
target_link_libraries(raw_multicast_bridge stk)
target_link_libraries(subscribe stk)
target_link_libraries(publish stk)

install (TARGETS simple_client DESTINATION examples)
install (TARGETS simple_server DESTINATION examples)
install (TARGETS throughput_test DESTINATION examples)
install (TARGETS monitored_service DESTINATION examples)
install (TARGETS simple_name_lookup DESTINATION examples)
install (TARGETS simple_name_registration DESTINATION examples)
install (TARGETS raw_multicast_bridge DESTINATION examples)
install (TARGETS subscribe DESTINATION examples)
install (TARGETS publish DESTINATION examples)
