SET(DISPATCHER_SOURCES ../examples/eg_dispatcher.c ../examples/eg_dispatcher_api.h)
add_executable(check_service_group_state_test check_service_group_state_test.c)
add_executable(create_env_test create_env_test.c)
add_executable(create_lite_pkg_test create_lite_pkg_test.c)
add_executable(create_sequence_test create_sequence_test.c)
add_executable(create_service_group_test create_service_group_test.c)
add_executable(create_service_test create_service_test.c)
add_executable(name_service_tests ${DISPATCHER_SOURCES} name_service_tests.c)
add_executable(options_tests options_tests.c)
add_executable(rawudp_data_flow_test rawudp_data_flow_test.c)
add_executable(sequence_iterator_test sequence_iterator_test.c)
add_executable(sequence_tests sequence_tests.c)
add_executable(service_group_auto_svc_test service_group_auto_svc_test.c)
add_executable(service_state_names service_state_names.c)
add_executable(tcp_data_flow_test tcp_data_flow_test.c)
add_executable(test_types test_types.c)
add_executable(timer_test timer_test.c)
add_executable(udp_data_flow_test udp_data_flow_test.c)

target_link_libraries(check_service_group_state_test stk)
target_link_libraries(create_env_test stk)
target_link_libraries(create_lite_pkg_test stk)
target_link_libraries(create_sequence_test stk)
target_link_libraries(create_service_group_test stk)
target_link_libraries(create_service_test stk)
target_link_libraries(name_service_tests stk)
target_link_libraries(options_tests stk)
target_link_libraries(rawudp_data_flow_test stk)
target_link_libraries(sequence_iterator_test stk)
target_link_libraries(sequence_tests stk)
target_link_libraries(service_group_auto_svc_test stk)
target_link_libraries(service_state_names stk)
target_link_libraries(tcp_data_flow_test stk)
target_link_libraries(test_types stk)
target_link_libraries(timer_test stk)
target_link_libraries(udp_data_flow_test stk)

install (TARGETS check_service_group_state_test DESTINATION test_programs)
install (TARGETS create_env_test DESTINATION test_programs)
install (TARGETS create_lite_pkg_test DESTINATION test_programs)
install (TARGETS create_sequence_test DESTINATION test_programs)
install (TARGETS create_service_group_test DESTINATION test_programs)
install (TARGETS create_service_test DESTINATION test_programs)
install (TARGETS name_service_tests DESTINATION test_programs)
install (TARGETS options_tests DESTINATION test_programs)
install (TARGETS rawudp_data_flow_test DESTINATION test_programs)
install (TARGETS sequence_iterator_test DESTINATION test_programs)
install (TARGETS sequence_tests DESTINATION test_programs)
install (TARGETS service_group_auto_svc_test DESTINATION test_programs)
install (TARGETS service_state_names DESTINATION test_programs)
install (TARGETS tcp_data_flow_test DESTINATION test_programs)
install (TARGETS test_types DESTINATION test_programs)
install (TARGETS timer_test DESTINATION test_programs)
install (TARGETS udp_data_flow_test DESTINATION test_programs)

file(COPY ${PROJECT_SOURCE_DIR}/test_programs/test.make DESTINATION test.make)